# abb-ros-catkin

./: README.md
matVec/: CMakeLists.txt  package.xml
matvec/: CMakeLists.txt  package.xml
robot_comm/: CMakeLists.txt  package.xml
robot_comm/include/robot_comm/: robot_comm.h
robot_comm/msg/: robot_JointsLog.msg
robot_comm/src/: robot_comm.cpp  robot_comm.h
robot_comm/srv/: robot_GetFK.srv  robot_GetIK.srv  robot_GetJoints.srv  robot_GetRobotAngle.srv  robot_HandCalibrate.srv  robot_HandGetPose.srv  robot_HandGetPressure.srv  robot_HandGripIn.srv  robot_HandGripOut.srv  robot_HandIsCalibrated.srv  robot_HandJogIn.srv  robot_HandJogOut.srv  robot_HandMoveTo.srv  robot_HandOffBlow.srv  robot_HandOnBlow.srv  robot_HandOnVacuum.srv  robot_HandSetForce.srv  robot_HandSetSpeed.srv  robot_HandStop.srv  robot_SetCartesianA.srv  robot_SetCartesianJ.srv  robot_SetJoints.srv
robot_node/: CMakeLists.txt  package.xml
robot_node/ABBInterpreter/RapidServer/MCube_6.04.Robot2_BACKUP_2017-07-18_with_signal_and_case5&7/: system.xml
robot_node/ABBInterpreter/RapidServer/System.6.MIT_BACKUP_2017-12-13_arc/: system.xml
robot_node/ABBInterpreter/RapidServer/Yumi-Hybrid_BACKUP_2020-02-15_addedIO/: system.xml
robot_node/ABBInterpreter/include/: ABBInterpreter.h
robot_node/ABBInterpreter/src/: ABBInterpreter.cpp
robot_node/launch/: force.launch  mcubeSystem.launch  prepushSystem.launch  yumi.launch  yumiForce.launch
robot_node/parameters/: mcubeRobotParams.yaml  old_mcubeRobotParams.yaml  prepushParams.yaml
robot_node/src/: robot_node.cpp  robot_node.h
(+93 files in other folders)
